# timemachine-firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diagram.json  partitions.csv  sdkconfig.defaults  sdkconfig.wokwi  test_firmware.py  wokwi.toml
components/ble_config/: CMakeLists.txt  ble_config.c
components/ble_config/include/: ble_config.h
components/brightness_control/: CMakeLists.txt  brightness_control.c
components/brightness_control/include/: brightness_control.h
components/clock/: CMakeLists.txt  clock.c
components/clock/include/: clock.h
components/display/: CMakeLists.txt  display.c  display_driver_config.h.in  idf_component.yml
components/display/drivers/console/: display_console.c  display_console.h
components/display/drivers/max7219/: display_max7219.c  display_max7219.h  mfactory_font.c  mfactory_font.h
components/display/include/: display.h
components/display/max7219/: default_font.c  default_font.h  display_max7219.c  display_max7219.h
components/display/max7219/fonts/: default_font.c  default_font.h  dotmatrix_font.c  dotmatrix_font.h  dotmatrix_small_font.c  dotmatrix_small_font.h  font.h  md_max72xx_font.c  md_max72xx_font.h
components/display/max7219/mock/: max7219.c
components/events/: CMakeLists.txt  timemachine_events.c
components/events/include/: display_scene.h  scene.h  timemachine_events.h
components/i18n/: CMakeLists.txt  i18n.c
components/i18n/include/: i18n.h
components/network/: CMakeLists.txt  network.c
components/network/include/: network.h
components/ntp_sync/: CMakeLists.txt  ntp_sync.c
components/ntp_sync/include/: ntp_sync.h
components/panel_manager/: CMakeLists.txt  panel_manager.c
components/panel_manager/include/: panel_manager.h
components/panels/clock_panel/: CMakeLists.txt  clock_panel.c
components/panels/clock_panel/include/: clock_panel.h
components/panels/date_panel/: CMakeLists.txt  date_panel.c
components/panels/date_panel/include/: date_panel.h
components/panels/weather_panel/: CMakeLists.txt  weather_panel.c
components/panels/weather_panel/include/: weather_icons.h  weather_panel.h
components/settings/: CMakeLists.txt  settings.c
components/settings/include/: settings.h
components/tick_task/: CMakeLists.txt  tick_task.c
components/tick_task/include/: tick_task.h
components/touch_sensor/: CMakeLists.txt  touch_sensor.c
components/touch_sensor/include/: touch_sensor.h
components/weather/: CMakeLists.txt  weather.c
components/weather/include/: weather.h
components/wifi_animation/: CMakeLists.txt  wifi_animation.c
components/wifi_animation/assets/: wifi_bars.h
components/wifi_animation/include/: wifi_animation.h
docs/: CONFIGURATION.md  LOCAL_SETUP.md  QUICKSTART.md  TESTING.md  TIMEZONES.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
